--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.6.3",
     "react-icons": "3.3.0",
     "react-redux": "6.0.0",
+    "react-router-dom": "^6.21.2",
     "react-scripts": "^2.1.3",
     "recharts": "^1.4.2",
     "redux": "^4.0.1",
