--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "3.8.2",
-    "@material-ui/icons": "3.0.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "axios": "^1.6.5",
     "react": "^16.6.3",
     "react-datasheet": "^1.3.10",
     "react-dom": "^16.6.3",
-    "react-icons": "3.3.0",
+    "react-icons": "^4.12.0",
     "react-redux": "6.0.0",
     "react-router-dom": "^6.21.2",
-    "react-scripts": "^2.1.3",
-    "recharts": "^1.4.2",
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.11.0",
     "redux": "^4.0.1",
     "redux-undo": "0.6.1"
   },
   "devDependencies": {
-    "stylelint": "9.9.0",
-    "stylelint-config-standard": "18.2.0"
+    "stylelint": "^16.2.1",
+    "stylelint-config-standard": "^36.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
